testing/sqltests/tests/snapshot_tests/sorting/snapshots/sorting__order-by-multiple-columns.snap
---
source: sorting.sqltest
expression: |-
  SELECT id, name, category, price
      FROM products
      ORDER BY category, price;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products USING INDEX idx_products_category_price
