testing/sqltests/tests/snapshot_tests/sorting/snapshots/sorting__order-by-with-nulls.snap
---
source: sorting.sqltest
expression: |-
  SELECT id, name, salary
      FROM employees
      ORDER BY salary;
info:
  statement_type: SELECT
  tables:
  - employees
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN employees USING INDEX idx_employees_salary
